Squashed commit of the following:
commit a0a9e71e328b6c44d426e6262f8d3ee3aed4515f
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Jan 30 15:53:21 2025 -0500

    remove container and prep v0.1.8-alpha

commit b7f5cea77fbea7f48d6edb17e1517040c1fefefb
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 21:27:10 2025 -0500

    backend package updates

commit ef468f16c6db1e6aebe7c57292b606400b7c0acc
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 21:21:31 2025 -0500

    core package updates

commit 3a3b225ca8c183f2b8f9619a152fa4d0b5680d55
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 21:19:47 2025 -0500

    pull vnlib.browser on demand

commit 97581d467f4c302761bc52fa4f0bde1126e146d6
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 14:16:43 2025 -0500

    include vnlib.browser local dependnecy

commit 9b4b9ef43f1a38af78d2dcb29075e3d93bdc16ba
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 14:05:23 2025 -0500

    pending readme changes

commit 32291c0973eab4f5a238663382989d0ab9533532
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 14:04:47 2025 -0500

    refactor(app): 6 Big refactor before dep

commit 92afc751bf764b5389ed1871fa6de17592738eae
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Jan 18 17:06:10 2025 -0500

    update download tab readme links

commit 71fce3a35820a65aaabfcafb57ca52633679821b
Merge: 294367d 69cb009
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Jan 18 17:04:15 2025 -0500

    merge develop

commit 294367d21202ef3418eb2dbffb475e171d6bfb8e
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Jan 18 16:46:18 2025 -0500

    Add changelog file

commit 782883a1a221dc8f5391219680d715e92fc29608
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Jan 16 12:07:13 2025 -0500

    display validation errors on bookmark add/edit form

commit 76ed1d2b43caf7098d77ee4dd7a1404fdc1ed250
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Jan 15 23:51:38 2025 -

--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,4 +1,4 @@
-version: 17
+version: 37
 jobs:
 - name: GitHub Push
   steps:
@@ -7,8 +7,7 @@ jobs:
     remoteUrl: https://github.com/VnUgE/Simple-Bookmark.git
     userName: VnUgE
     passwordSecret: github-access-token
-    withLfs: false
-    force: false
+    force: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
   - !TagCreateTrigger
@@ -18,27 +17,100 @@ jobs:
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
-  cpuRequirement: 250
-  memoryRequirement: 256
   timeout: 3600
-- name: GitHub Pull
+- name: Unit Testing
   steps:
-  - !PullRepository
-    name: GitHub sync pull
-    remoteUrl: https://github.com/VnUgE/Simple-Bookmark.git
-    userName: VnUgE
-    passwordSecret: github-access-token
-    refs: refs/heads/* refs/tags/*
+  - !CheckoutStep
+    name: checkout
+    cloneCredential: !DefaultCredential {}
     withLfs: false
-    force: false
+    withSubmodules: false
+    checkoutPath: '@project_name@'
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: run unit tests
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        cd @project_name@
+        task -t Module.Taskfile.yaml test
+    useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
-  - !ScheduleTrigger
-    cronExpression: 0 15 10 ? * *
-    projects: Simple-Bookmark
+  - !BranchUpdateTrigger
+    branches: '** -master'
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
-  cpuRequirement: 250
-  memoryRequirement: 256
-  timeout: 3600
+  timeout: 14400
+- name: Staging build
+  steps:
+  - !CheckoutStep
+    name: checkout
+    cloneCredential: !DefaultCredential {}
+    withLfs: false
+    withSubmodules: false
+    checkoutPath: '@project_name@'
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: mock build
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        vnbuild build -S --include @project_name@ --verbose
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: mock publish
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        vnbuild publish -i @project_name@
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  triggers:
+  - !BranchUpdateTrigger
+    branches: develop
+  jobDependencies:
+  - jobName: Unit Testing
+    requireSuccessful: true
+  retryCondition: never
+  maxRetries: 3
+  retryDelay: 30
+  timeout: 14400
+- name: Publish Tag
+  steps:
+  - !CheckoutStep
+    name: checkout
+    cloneCredential: !DefaultCredential {}
+    withLfs: false
+    withSubmodules: false
+    checkoutPath: '@project_name@'
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: VNBuild build
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        vnbuild build -S --include @project_name@
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: VNBuild publish
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        vnbuild publish -i @project_name@ --ftp "@secret:ftp_server_address@" --sign
+    envVars:
+    - name: FTP_USERNAME
+      value: '@secret:ftp_username@'
+    - name: FTP_PASSWORD
+      value: '@secret:ftp_password@'
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  triggers:
+  - !TagCreateTrigger {}
+  retryCondition: never
+  maxRetries: 3
+  retryDelay: 30
+  timeout: 14400
