--- a/back-end/bookmarks/src/SimpleBookmark.csproj
+++ b/back-end/bookmarks/src/SimpleBookmark.csproj
@@ -13,9 +13,9 @@
     <Company>Vaughn Nugent</Company>
     <Product>simple-bookmark</Product>
     <Description>A VNLib.Plugins.Essentials plugin that adds Simple Bookmark back-end functionality</Description>
-    <Copyright>Copyright © 2024 Vaughn Nugent</Copyright>
+    <Copyright>Copyright © 2025 Vaughn Nugent</Copyright>
     <PackageProjectUrl>https://www.vaughnnugent.com/resources/software/modules/simple-bookmark</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/VnUgE/simple-bookmark/tree/master/back-end</RepositoryUrl>
+    <RepositoryUrl>https://github.com/VnUgE/simple-bookmark/tree/master/back-end/bookmarks</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
@@ -25,7 +25,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\..\LICENSE">
+    <None Include="..\..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -33,11 +33,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="VNLib.Plugins.Extensions.Data" Version="0.1.0-ci0064" />
-    <PackageReference Include="VNLib.Plugins.Extensions.Loading" Version="0.1.0-ci0064" />
-    <PackageReference Include="VNLib.Plugins.Extensions.Loading.Sql" Version="0.1.0-ci0064" />
-    <PackageReference Include="VNLib.Plugins.Extensions.Validation" Version="0.1.0-ci0064" />
-    <PackageReference Include="VNLib.Plugins.Extensions.VNCache" Version="0.1.0-ci0057" />
+    <PackageReference Include="VNLib.Plugins.PluginBase" Version="0.1.0-ci0215" />
+    <PackageReference Include="VNLib.Plugins.Essentials" Version="0.1.0-ci0215" />
+    <PackageReference Include="VNLib.Plugins.Extensions.Data" Version="0.1.0-ci0078" />
+    <PackageReference Include="VNLib.Plugins.Extensions.Loading" Version="0.1.0-ci0078" />
+    <PackageReference Include="VNLib.Plugins.Extensions.Loading.Sql" Version="0.1.0-ci0078" />
+    <PackageReference Include="VNLib.Plugins.Extensions.Validation" Version="0.1.0-ci0078" />
   </ItemGroup>
 
   <ItemGroup>
