--- a/front-end/Taskfile.yaml
+++ b/front-end/Taskfile.yaml
@@ -6,27 +6,43 @@ version: '3'
 tasks:
 
   package-update:
-    dir: '{{.USER_WORKING_DIR}}'
+    dir: '{{ .USER_WORKING_DIR }}'
     cmds:
-     - npm update
+     - cmd: npm update
 
   build:
     cmds:
+    - defer: { task: clean-vnlib-browser }
+    - task: pull-vnlib-browser
     #install deps and run build
-    - npm install && npm run build
-    
+    - cmd: npm install && npm run build
+
   #copy artifacts to temp directory
   postbuild_success:
     cmds:
-    - powershell -Command "mkdir bin -Force"
+    - cmd: powershell mkdir -Force bin
     #tar the dist output and put it in the output dir
-    - cd dist && tar -czf '../bin/release.tgz' .
+    - cmd: cd dist && tar -czf '../bin/release.tgz' .
+
+  pull-vnlib-browser:
+    internal: true
+    cmds:
+     - cmd: powershell mkdir -Force lib/vnlib.browser
+     - cmd: curl{{ exeExt }} 
+        https://www.vaughnnugent.com/public/resources/software/builds/Plugins.Essentials/785bb68b2670e982a199fe3be93aa50a08c7af77/@vnuge-vnlib.browser/release.tgz
+        -o lib/vnlib.browser/release.tgz
+     - cmd: cd lib/vnlib.browser && tar -xzf release.tgz
+
+  clean-vnlib-browser:
+    internal: true
+    cmds:
+     - cmd: powershell rm -Recurse -Force lib/vnlib.browser
 
   #clean hook
   clean:
     ignore_error: true
     cmds:
     - for: [ node_modules/, dist/, bin/ ]
-      cmd: powershell -Command "Remove-Item -Recurse -Force {{.ITEM}}"
+      cmd: powershell Remove-Item -Recurse -Force "{{ .ITEM }}"
 
-    - cmd: powershell -Command "Remove-Item release.tgz"
+    - cmd: powershell Remove-Item -Force release.tgz
